Backend 폴더로 백엔드 코드 전부 이동. OpenAPI 스펙 수정
